--- a/src/views/partials/do-answer-enabled.hbs
+++ b/src/views/partials/do-answer-enabled.hbs
@@ -25,7 +25,7 @@
                   USD
                 </div>
                 <span class="answer-header-time">
-                  <i class="fas fa-hourglass-half"></i>   Asked {{formatDate question.createdAt}}
+                  <i class="fas fa-hourglass-half"></i> Asked {{formatDate question.createdAt}}
                 </span>
               </div>
             </div>
@@ -33,6 +33,12 @@
           <div class="answer-body">
             <div class="answer-body-description">
               {{{question.description}}}
+              {{#ifExist question.img.contentType }}
+              <div class="answer-body-image">
+                <img class="answer-body-image-img" src="data:image/{{question.img.contentType}};base64,
+                     {{ toString question.img.data}}">
+              </div>
+              {{/ifExist}}
             </div>
             <div class="answer-body-tags">
               <div class="answer-body-tags-title">
@@ -79,13 +85,13 @@
 
       </div>
       <div class="row">
-      <div class="answer-do-container col-md-8">
+        <div class="answer-do-container col-md-8">
           <form action="/questions/doanswer/{{question.id}}?_method=PUT" method="POST">
-             <input type ="hidden" name ="_method" value="PUT">
-        <textarea  name="new_answer" class="trumbowyg-textarea" required="required" ></textarea>
-         <button class="button-main-1 mt-5" type="submit"> Save </button>
-        </form>
-      </div>
+            <input type="hidden" name="_method" value="PUT">
+            <textarea name="new_answer" class="trumbowyg-textarea" required="required"></textarea>
+            <button class="button-main-1 mt-5" type="submit"> Save </button>
+          </form>
+        </div>
       </div>
       {{#each answers}}
       <div class="answer-own-question col-md-12">
@@ -133,99 +139,99 @@
                         </svg>
 
                       </div>
-                  
-                        {{#RatingEnabled ../rating_by }}
-                        <!-- en el caso que aun no le haya puesto nota -->
-                        <div class="stars-content">
 
-                          <div class="">
-                            {{#isGreater
-                            (ratingUserAVG
-                            ../answerRating.star1
-                            ../answerRating.star2
-                            ../answerRating.star3
-                            ../answerRating.star4
-                            ../answerRating.star5
-                            )
-                            1
-                            }}
-                            <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
-                            {{else}}
-                            <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
-                            {{/isGreater}}
+                      {{#RatingEnabled ../rating_by }}
+                      <!-- en el caso que aun no le haya puesto nota -->
+                      <div class="stars-content">
 
-                          </div>
-                          <div class="">
-                            {{#isGreater
-                            (ratingUserAVG
-                            ../answerRating.star1
-                            ../answerRating.star2
-                            ../answerRating.star3
-                            ../answerRating.star4
-                            ../answerRating.star5
-                            )
-                            2
-                            }}
-                            <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
-                            {{else}}
-                            <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
-                            {{/isGreater}}
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          1
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
 
-                          </div>
-                          <div class="">
-                            {{#isGreater
-                            (ratingUserAVG
-                            ../answerRating.star1
-                            ../answerRating.star2
-                            ../answerRating.star3
-                            ../answerRating.star4
-                            ../answerRating.star5
-                            )
-                            3
-                            }}
-                            <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
-                            {{else}}
-                            <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
-                            {{/isGreater}}
-
-                          </div>
-                          <div class="">
-                            {{#isGreater
-                            (ratingUserAVG
-                            ../answerRating.star1
-                            ../answerRating.star2
-                            ../answerRating.star3
-                            ../answerRating.star4
-                            ../answerRating.star5
-                            )
-                            4
-                            }}
-                            <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
-                            {{else}}
-                            <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
-                            {{/isGreater}}
-
-                          </div>
-                          <div class="">
-                            {{#isGreater
-                            (ratingUserAVG
-                            ../answerRating.star1
-                            ../answerRating.star2
-                            ../answerRating.star3
-                            ../answerRating.star4
-                            ../answerRating.star5
-                            )
-                            5
-                            }}
-                            <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
-                            {{else}}
-                            <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
-                            {{/isGreater}}
-
-                          </div>
                         </div>
-                        {{else}}
-                            <div class="star-container ">
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          2
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          3
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          4
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          5
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                      </div>
+                      {{else}}
+                      <div class="star-container ">
                         <!-- en el caso que ya le haya puesto la nota -->
                         <input type="radio" name="star" id="5_{{../_id}}"
                           onClick="addRatingAnswerAjax({{json ../_id}}, 5)">
@@ -262,8 +268,8 @@
                             <use xlink:href="#star" />
                           </svg>
                         </label>
-                        </div>
-                        {{/RatingEnabled}}
+                      </div>
+                      {{/RatingEnabled}}
                     </div>
                   </div>
                 </div>
@@ -284,7 +290,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star5}} {{answerRating.star5}} {{else}} 0 {{/ifExist}} </div>
+                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star5}}
+                      {{answerRating.star5}} {{else}} 0 {{/ifExist}} </div>
                   </div>
                   <div class="rating-bar-answer">
                     <div class="" style="width:35px; line-height:1;">
@@ -300,7 +307,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star4}} {{answerRating.star4}} {{else}} 0 {{/ifExist}} </div>
+                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star4}}
+                      {{answerRating.star4}} {{else}} 0 {{/ifExist}} </div>
                   </div>
                   <div class="rating-bar-answer">
                     <div class="" style="width:35px; line-height:1;">
@@ -316,7 +324,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star3}} {{answerRating.star3}} {{else}} 0 {{/ifExist}} </div>
+                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star3}}
+                      {{answerRating.star3}} {{else}} 0 {{/ifExist}} </div>
                   </div>
                   <div class="rating-bar-answer">
                     <div class="" style="width:35px; line-height:1;">
@@ -332,7 +341,8 @@
                         </div>
                       </div>
                     </div>
-                   <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star2}} {{answerRating.star2}} {{else}} 0 {{/ifExist}} </div>
+                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star2}}
+                      {{answerRating.star2}} {{else}} 0 {{/ifExist}} </div>
                   </div>
                   <div class="rating-bar-answer">
                     <div class="" style="width:35px; line-height:1;">
@@ -348,7 +358,8 @@
                         </div>
                       </div>
                     </div>
-                   <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star1}} {{answerRating.star1}} {{else}} 0 {{/ifExist}} </div>
+                    <div class="float-right" style="margin-left:10px;">{{#ifExist answerRating.star1}}
+                      {{answerRating.star1}} {{else}} 0 {{/ifExist}} </div>
                   </div>
                 </div>
               </div>
@@ -363,4 +374,3 @@
     </div>
   </div>
 </div>
-
