--- a/src/views/paypal/cancel-payment.hbs
+++ b/src/views/paypal/cancel-payment.hbs
@@ -15,7 +15,7 @@
         <header class="section-header wow fadeInUp">
           <h3>WARNING! Your payment was not successful</h3>
           <p>
-            Please try to make the payment again, if the problem persists contact: contacto@priceanswers.com.</p>
+            Please try to make the payment again, if the problem persists contact: contact@priceanswers.com.</p>
           <div class="row justify-content-md-center">
             <a href="/questions/ownquestions"> <button class="button-main-4">Go to your Questions</button></a>
           </div>
