--- a/src/views/templates/html.hbs
+++ b/src/views/templates/html.hbs
@@ -1,65 +1,64 @@
+<div>
 
-    <div>
-
-          <table align="center" height="100%" width="690" border="0" cellspacing="0" cellpadding="0" bgcolor="#ffffff"
-            style="font-family:Helvetica,Arial,sans-serif!important">
+  <table align="center" height="100%" width="690" border="0" cellspacing="0" cellpadding="0" bgcolor="#ffffff"
+    style="font-family:Helvetica,Arial,sans-serif!important">
+    <tbody>
+      <tr>
+        <td>
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
             <tbody>
+              <tr bgcolor="#ffffff">
+                <td align="center" width="100%">
+                </td>
+              </tr>
               <tr>
-                <td>
-                  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                <td align="center" width="100%">
+                  <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff"
+                    style="border:1px solid #dedede;border-radius:3px">
                     <tbody>
-                      <tr bgcolor="#ffffff">
-                        <td align="center" width="100%">
-                        </td>
-                      </tr>
                       <tr>
-                        <td align="center" width="100%">
-                          <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0"
-                            bgcolor="#ffffff" style="border:1px solid #dedede;border-radius:3px">
+                        <td align="left" valign="top">
+                          <table width="560" align="center" border="0" cellspacing="0" cellpadding="0">
                             <tbody>
                               <tr>
-                                <td align="left" valign="top">
-                                  <table width="560" align="center" border="0" cellspacing="0" cellpadding="0">
+                                <td width="100%" height="56"></td>
+                              </tr>
+                              <tr>
+                                <td align="center" width="100%" style="text-align:left">
+                                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                                     <tbody>
                                       <tr>
-                                        <td width="100%" height="56"></td>
+                                        <td colspan="3" height="0"></td>
                                       </tr>
                                       <tr>
-                                        <td align="center" width="100%" style="text-align:left">
-                                          <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
-                                            <tbody>
-                                              <tr>
-                                                <td colspan="3" height="0"></td>
-                                              </tr>
-                                              <tr>
-                                                <td width="0"></td>
-                                                <td><span
-                                                    style="color:#000000;font-family:Helvetica,Arial,sans-serif;font-size:22px;font-weight:bold;line-height:1.5;padding:2rem; ">Hi {{name}}:</span></td>
-                                                <td width="0"></td>
-                                              </tr>
-                                            </tbody>
-                                          </table>
-                                        </td>
+                                        <td width="0"></td>
+                                        <td><span
+                                            style="color:#000000;font-family:Helvetica,Arial,sans-serif;font-size:22px;font-weight:bold;line-height:1.5;padding:2rem; ">Hi
+                                            {{name}}:</span></td>
+                                        <td width="0"></td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td width="100%" height="24"></td>
+                              </tr>
+                              <tr>
+                                <td align="center" width="100%"
+                                  style="color:#0e1724;text-align:left;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:28px">
+                                  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                                    <tbody>
+                                      <tr>
+                                        <td style="padding: 2rem; font-weight: bold;">Priceanswer.com</td>
                                       </tr>
                                       <tr>
-                                        <td width="100%" height="24"></td>
-                                      </tr>
-                                      <tr>
-                                        <td align="center" width="100%"
-                                          style="color:#0e1724;text-align:left;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:28px">
-                                          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
-                                            <tbody>
-                                              <tr>
-                                                <td style="padding: 2rem;">
-                                                  Priceanswer.com
-                                                  You have received a request to reset your password for
-                                                  your account. If you have not requested to reset your password, please
-                                                  ignore this email.<br><br><a href="{{link}}"
-                                                    style="font-size:14px;font-weight:bold;color:white;border:1px solid #21aa13;background: #46a1da;padding:5px 10px;padding: 0.8rem;"
-                                                    >Modify Password</a><br><br></td>
-                                              </tr>
-                                            </tbody>
-                                          </table>
+                                        <td style="padding: 2rem;">
+                                          You have received a request to reset your password for
+                                          your account. If you have not requested to reset your password, please
+                                          ignore this email.<br><br><a href="{{link}}"
+                                            style="font-size:14px;font-weight:bold;color:white;border:1px solid #21aa13;background: #46a1da;padding:5px 10px;padding: 0.8rem;">Modify
+                                            Password</a><br><br>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -74,80 +73,81 @@
                   </table>
                 </td>
               </tr>
-              <tr>
-                <td>
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
-                    <tbody>
-                      <tr>
-                        <td height="24"></td>
-                      </tr>
-                      <tr>
-                        <td align="center"><span
-                            style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5">©
-                            2021 Priceanswers.com . All Rights Reserved.</span></td>
-                      </tr>
-                      <tr>
-                        <td height="8"></td>
-                      </tr>
-                      <tr>
-                        <td height="8"></td>
-                      </tr>
-                      <tr>
-                        <td align="center"><a
-                            href="https://www.freelancer.com/page.php?p=info%2Fprivacy&amp;uniqid=42091152-33172-61434ee7-b05620ea&amp;linkid=2"
-                            style="color:#75787d;font-weight:normal;text-decoration:underline" target="_blank"
-                            data-saferedirecturl="https://www.google.com/url?q=https://www.freelancer.com/page.php?p%3Dinfo%252Fprivacy%26uniqid%3D42091152-33172-61434ee7-b05620ea%26linkid%3D2&amp;source=gmail&amp;ust=1631887466980000&amp;usg=AFQjCNFDJVkKwCWhEbT1mdjKD5ZfVeOBEw"><span
-                              style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5;text-decoration:underline">Política
-                              de privacidad</span></a>
-                          &nbsp;
-                          <span
-                            style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5">|</span>
-                          &nbsp;
-                          <a href="https://www.freelancer.com/page.php?p=info%2Fterms&amp;uniqid=42091152-33172-61434ee7-b05620ea&amp;linkid=3"
-                            style="color:#75787d;font-weight:normal;text-decoration:underline" target="_blank"
-                            data-saferedirecturl="https://www.google.com/url?q=https://www.freelancer.com/page.php?p%3Dinfo%252Fterms%26uniqid%3D42091152-33172-61434ee7-b05620ea%26linkid%3D3&amp;source=gmail&amp;ust=1631887466980000&amp;usg=AFQjCNHLke9Gi3oMFSbQ7nardw4TrTHOFg"><span
-                              style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5;text-decoration:underline">Términos
-                              y condiciones</span></a>
-                          &nbsp;
-                        </td>
-                      </tr>
-                      <tr>
-                        <td height="16"></td>
-                      </tr>
-                      <tr>
-                        <td align="center">
-                          <table align="center" border="0" cellpadding="0" cellspacing="0">
-                            <tbody>
-                              <tr>
-                                <td><a href="" target="_blank"><img
-                                      alt="Facebook" border="0"
-                                      src="https://ci3.googleusercontent.com/proxy/4VM8xEZ_9S9zUCOLNAeT7KNfvnzuVv0JE_JZY6qEYWviCmnLVJ2ODZQz16aKaW6BFp1qHvG7dn69v0NFolGsCU0ccKdUlEbNcxM6ls8MNISHKyjbuJj4uwu4kbexNl4ZRHOK55TX3U3b0COnDTRZ7GJRuWMuhV0=s0-d-e1-ft#https://d3bvzwcd1dw6vt.cloudfront.net/static/images/email/build/19bacfd0c58e6a35b841790d89354564.png"
-                                      width="24" class="CToWUd"></a></td>
-                                <td width="4"></td>
-                                <td><a href="" target="_blank"><img
-                                      alt="Twitter" border="0"
-                                      src="https://ci4.googleusercontent.com/proxy/_EaQ7b2M5Jw7oiHdjnd72lYCrE5eXrdFKfZ3rc7s5DEscez29r1ecMdHaWZtLrfAYSzKSJKO_2TJ-h_UDuPQqn8dqKRbCAeXgbkSQoxqtRley3mJn9njZ8QlHljTaI520uEwrajd-r_XQn_4IPY5t-kzqoejgL4=s0-d-e1-ft#https://d3bvzwcd1dw6vt.cloudfront.net/static/images/email/build/cf858d8bbdf01f6d8f3a7f3ecb08f266.png"
-                                      width="24" class="CToWUd"></a></td>
-                                <td width="4"></td>
-                                <td><a href="" target="_blank"><img
-                                      alt="Instagram" border="0"
-                                      src="https://ci5.googleusercontent.com/proxy/YdOs4QeEn4G29g2b9DWL1A4oXmx4tNoT_sDKofdZGxWoAai7NpWslPrYRYxrVrvq2vpwbsHfb2ty8fHwUHmkwpms2r_lcdHjSEOKe-GbCizKJQpebTjHELmZw4nl6B0FxVUne8y1Z6hBNjt_1fAwogUfqcaYkkw=s0-d-e1-ft#https://d3bvzwcd1dw6vt.cloudfront.net/static/images/email/build/7517195fa748ffb4ccc210202e644d7d.png"
-                                      width="24" class="CToWUd"></a></td>
-                                <td width="16"></td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td height="24"></td>
-                      </tr>
-                    </tbody>
-                  </table><img
-                    src="https://ci4.googleusercontent.com/proxy/wS1SJIzAk1AB8cuefk9Q-fBXB-AIns1YZXO-UC9W2BPCEn5pBTdiISi5xJT3IpeXIV7Hi8kr5wW-OH_JYXkKuGPWEMytfP7VuVKiT5Hn7UvyzdAmuMicJZ9FTf8jgsV0_0bfs54sUjse6j2I6VqAnNeAM_3ysmLZoei7LrNSleZUU1xKOm20-70=s0-d-e1-ft#https://t.freelancer.com/1px.gif?en=email-tracking.opened&amp;acct=.Freelancer.com&amp;uniqid=42091152-33172-61434ee7-b05620ea"
-                    style="border:1px solid #d9d9d9" class="CToWUd">
-                </td>
-              </tr>
             </tbody>
           </table>
-        </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+            <tbody>
+              <tr>
+                <td height="24"></td>
+              </tr>
+              <tr>
+                <td align="center"><span
+                    style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5">©
+                    2021 Priceanswers.com . All Rights Reserved.</span></td>
+              </tr>
+              <tr>
+                <td height="8"></td>
+              </tr>
+              <tr>
+                <td height="8"></td>
+              </tr>
+              <tr>
+                <td align="center"><a
+                    href="https://www.freelancer.com/page.php?p=info%2Fprivacy&amp;uniqid=42091152-33172-61434ee7-b05620ea&amp;linkid=2"
+                    style="color:#75787d;font-weight:normal;text-decoration:underline" target="_blank"
+                    data-saferedirecturl="https://www.google.com/url?q=https://www.freelancer.com/page.php?p%3Dinfo%252Fprivacy%26uniqid%3D42091152-33172-61434ee7-b05620ea%26linkid%3D2&amp;source=gmail&amp;ust=1631887466980000&amp;usg=AFQjCNFDJVkKwCWhEbT1mdjKD5ZfVeOBEw"><span
+                      style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5;text-decoration:underline">Política
+                      de privacidad</span></a>
+                  &nbsp;
+                  <span
+                    style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5">|</span>
+                  &nbsp;
+                  <a href="https://www.freelancer.com/page.php?p=info%2Fterms&amp;uniqid=42091152-33172-61434ee7-b05620ea&amp;linkid=3"
+                    style="color:#75787d;font-weight:normal;text-decoration:underline" target="_blank"
+                    data-saferedirecturl="https://www.google.com/url?q=https://www.freelancer.com/page.php?p%3Dinfo%252Fterms%26uniqid%3D42091152-33172-61434ee7-b05620ea%26linkid%3D3&amp;source=gmail&amp;ust=1631887466980000&amp;usg=AFQjCNHLke9Gi3oMFSbQ7nardw4TrTHOFg"><span
+                      style="color:#75787d;font-family:Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:1.5;text-decoration:underline">Términos
+                      y condiciones</span></a>
+                  &nbsp;
+                </td>
+              </tr>
+              <tr>
+                <td height="16"></td>
+              </tr>
+              <tr>
+                <td align="center">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td><a href="" target="_blank"><img alt="Facebook" border="0"
+                              src="https://ci3.googleusercontent.com/proxy/4VM8xEZ_9S9zUCOLNAeT7KNfvnzuVv0JE_JZY6qEYWviCmnLVJ2ODZQz16aKaW6BFp1qHvG7dn69v0NFolGsCU0ccKdUlEbNcxM6ls8MNISHKyjbuJj4uwu4kbexNl4ZRHOK55TX3U3b0COnDTRZ7GJRuWMuhV0=s0-d-e1-ft#https://d3bvzwcd1dw6vt.cloudfront.net/static/images/email/build/19bacfd0c58e6a35b841790d89354564.png"
+                              width="24" class="CToWUd"></a></td>
+                        <td width="4"></td>
+                        <td><a href="" target="_blank"><img alt="Twitter" border="0"
+                              src="https://ci4.googleusercontent.com/proxy/_EaQ7b2M5Jw7oiHdjnd72lYCrE5eXrdFKfZ3rc7s5DEscez29r1ecMdHaWZtLrfAYSzKSJKO_2TJ-h_UDuPQqn8dqKRbCAeXgbkSQoxqtRley3mJn9njZ8QlHljTaI520uEwrajd-r_XQn_4IPY5t-kzqoejgL4=s0-d-e1-ft#https://d3bvzwcd1dw6vt.cloudfront.net/static/images/email/build/cf858d8bbdf01f6d8f3a7f3ecb08f266.png"
+                              width="24" class="CToWUd"></a></td>
+                        <td width="4"></td>
+                        <td><a href="" target="_blank"><img alt="Instagram" border="0"
+                              src="https://ci5.googleusercontent.com/proxy/YdOs4QeEn4G29g2b9DWL1A4oXmx4tNoT_sDKofdZGxWoAai7NpWslPrYRYxrVrvq2vpwbsHfb2ty8fHwUHmkwpms2r_lcdHjSEOKe-GbCizKJQpebTjHELmZw4nl6B0FxVUne8y1Z6hBNjt_1fAwogUfqcaYkkw=s0-d-e1-ft#https://d3bvzwcd1dw6vt.cloudfront.net/static/images/email/build/7517195fa748ffb4ccc210202e644d7d.png"
+                              width="24" class="CToWUd"></a></td>
+                        <td width="16"></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+              <tr>
+                <td height="24"></td>
+              </tr>
+            </tbody>
+          </table><img
+            src="https://ci4.googleusercontent.com/proxy/wS1SJIzAk1AB8cuefk9Q-fBXB-AIns1YZXO-UC9W2BPCEn5pBTdiISi5xJT3IpeXIV7Hi8kr5wW-OH_JYXkKuGPWEMytfP7VuVKiT5Hn7UvyzdAmuMicJZ9FTf8jgsV0_0bfs54sUjse6j2I6VqAnNeAM_3ysmLZoei7LrNSleZUU1xKOm20-70=s0-d-e1-ft#https://t.freelancer.com/1px.gif?en=email-tracking.opened&amp;acct=.Freelancer.com&amp;uniqid=42091152-33172-61434ee7-b05620ea"
+            style="border:1px solid #d9d9d9" class="CToWUd">
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
